@@ -2,6 +2,10 @@
 
 ** TBD
 
+*Breaking changes*
+
+- Completely get rid of =vino-db=. Why? TL;DR =vulpea-db= is powerful enough to cover all the use cases I have ever faced. Over the last 2 years I have never used =vino-db=.
+
 ** v0.3.1
 
 *Features*
